adminログイン、物件入稿画面のレイアウト完成

--- a/app/views/admins/customers/_footer.html.erb
+++ b/app/views/admins/customers/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer>
-  <p>copyright</p>
+<footer class="admin-footer" style="height: 50px;background-color: #18003E;">
+  <div class="text-center pt-3"style="color: white;">©️copyright</p>
 </footer>
