--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -1,25 +1,23 @@
-<header class="shadow-sm">
+<header class="shadow-sm" style="position: sticky; position: -webkit-sticky; top: 0;">
   <nav class="navbar navbar-expand-xs navbar-light">
-    <div class="container">
-      <a class="navbar-brand p-3" href="/"><%= image_tag('logo1.jpg') %></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-        <% if admin_signed_in? %>
+    <a class="navbar-brand p-0" href="/admins/sign_in"><%= image_tag('logo1.jpg') %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+      <% if admin_signed_in? %>
         <li class="nav-item">
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </li>
         <li class="nav-item">
-          <%= link_to "物件入稿ページへ進む", new_admins_estate_path %>
+          <%= link_to "物件入稿ページへ進む", new_admins_estate_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </li>
         <li class="nav-item">
-          <%= link_to "一覧ページへ進む", admins_estates_path %>
+          <%= link_to "一覧ページへ進む", admins_estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </li>
-        <% end %>
-        </ul>
-      </div>
+      <% end %>
+      </ul>
     </div>
   </nav>
 </header>
