--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= render "customers/shared/error_messages", resource: resource %>
 
   <div class="container">
-    <div class="card" style="margin-bottom: 150px;">
+    <div class="card shadow" style="margin-bottom: 150px;">
       <div class="row pt-5 pb-4">
         <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
