--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,11 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+.sticky-top {
+  background-color: white;
+  position: fixed;
+}
+
 .search {
   background-color: #18003E;
   color: white;
@@ -61,7 +66,7 @@
   text-align: right;
 }
 
-.top.col-4:hover {
+.image-top:hover {
   opacity: 0.5;
 }
 
