--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "admins/customers/header" %>
 
-<h2>入稿物件一覧</h2>
+<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">入稿物件一覧</div>
 <div class="container">
   <div class="row">
     <% @estates.each do |estate| %>
@@ -34,24 +34,38 @@
   </div>
 </div>
 
-
-<h2>カスタマー一覧</h2>
-<div class="container">
-  <div class="row">
-    <% @customers.each do |customer| %>
-      <div class="col-11">
-        <div class="card">
-          <div class="card-body">
-            <h5>お名前：<%= customer.name %></h5>
-            <h5>メールアドレス：<%= customer.email %></h5>
-            <h5>電話番号：<%= customer.phone_number %></h5>
-            <h5>会員登録された日時：<%= customer.created_at.strftime('%Y年%m月%d日 %H時%M分') %></h5>
+<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">カスタマーズ</div>
+<div class="container" style="margin-bottom: 100px;">
+  <% @customers.each do |customer| %>
+    <div class="card shadow">
+      <div class="row pt-5">
+        <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
+        <div class="col-7">
+          <div class="card" style="font-size: 25px;">
+            <%= customer.name %>
           </div>
         </div>
       </div>
-    <% end %>
-  </div>
+      <div class="row pt-4">
+        <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">メールアドレス</div>
+        <div class="col-7">
+          <div class="card" style="font-size: 25px;">
+            <%= customer.email %>
+          </div>
+        </div>
+      </div>
+      <div class="row pt-4 pb-5">
+        <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">電話番号</div>
+        <div class="col-7">
+          <div class="card" style="font-size: 25px;">
+            <%= customer.phone_number %>
+          </div>
+        </div>
+      </div>
+  　</div>
+　<% end %>
 </div>
+
 <%= paginate @customers %>
 
 <%= render "admins/customers/footer" %>
