--- a/app/views/customers/researches/new.html.erb
+++ b/app/views/customers/researches/new.html.erb
@@ -1,26 +1,36 @@
 <%= render "customers/customers/header" %>
 
-<h1>お問い合わせ</h1>
-
+<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">お問い合わせ</div>
 <%= form_with model: @research, url: estate_researches_path, local: true do |f| %>
-  <p><%= f.label :タイトル %></p>
-<%= f.text_field :title, :size=> "100x100", :placeholder => "タイトルを入れてください。" %>
-  <p><%= f.label :本文 %></p>
-<%= f.text_area :body, :size=>"100x10", :placeholder => "コメントをご入力ください。" %>
-  <p><%= f.submit "お問合せ" %></p>
+  <div class="container">
+    <div class="card shadow" style="margin: 0 0 150px 0;">
+      <div class="row" style="padding: 60px 0 40px 0">
+        <div class="col-2 text-center"><%= f.label :タイトル %></div>
+        <div class="col-5"><%= f.text_field :title, placeholder:"タイトルをご入力ください。", :size=>"101x10" %></div>
+      </div>
+      <div class="row pb-5">
+        <div class="col-2 text-center"><%= f.label :本文 %></div>
+        <div class="col-1"><%= f.text_area :body, placeholder:"コメントをご入力ください。", :size=>"100x10" %></div>
+      </div>
+      <div class="row justify-content-center pb-5"><%= f.submit "お問い合せ", class: "search" %></div>
+      <div class="row">
+        <div class="col-9 text-right" style="padding-top: 60px;">
+          <p>お問合せするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
+        </div>
+        <div class="col" style="padding-top: 68px;">
+          <%= link_to "ログイン", new_customer_session_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        </div>
+      </div>
+      <div class="row" style="padding: 30px 0 20px 0;">
+        <div class="col-9 pb-5 text-right">
+          <p>お問合せするには会員登録が必要です。<br/>会員登録をする方は会員登録へ→</p>
+        </div>
+        <div class="col">
+          <%= link_to "会員登録", new_customer_registration_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
-
-
-<p>お問合せするにはログインが必要です。<br/>
-会員登録済みの方はログインへ→</p>
-
-<div class="login right">
-  <button type="button" class="btn btn-secondary"><%= link_to "ログイン", new_customer_session_path %></button>
-</div>
-<p>お問合せするには会員登録が必要です。<br/>
-会員登録をする方は会員登録へ→</p>
-<div class="registration">
-  <button type="button" class="btn btn-secondary"><%= link_to "会員登録", new_customer_registration_path %></button>
-</div>
 
 <%= render "customers/customers/footer" %>
